@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.29 2002/09/04 04:18:43 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.30 2002/09/04 04:21:37 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1406,3 +1406,7 @@ lib/libc/stdlib/calloc.c			1.10-1.12
 lib/libipsec/policy_parse.y			1.8
 lib/libipsec/policy_token.l			1.7
   plug memory leak.  from ebisawa@iij, sync w/kame
+
+sys/netinet/ip_mroute.c				1.61
+  bring back old copyright notice lost in rev 1.15 (which is the authors'
+  intent).
